# electroencephalogaming

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Electroencephalogaming/: 2024-01-30.md  2024-02-06.md  2024-02-13.md  2024-02-20.md  2024-02-27.md  2024-03-05.md  2024-03-12.md  2024-03-19.md  Brain.md  EEG.md  Motor Imagery.md  Signal Processing.md  TO-DO.md  problem-statement.md  research-questions.md  throwaway.md
Electroencephalogaming/articles/: A new approach to feature extraction in MI-based BCI systems.md  An on-line transformation of EEG scalp potentials into orthogonal source derivations.md  Autocalibration and Recurrent Adaptation, Towards a Plug and Play Online ERD-BCI.md  Brain-Computer Interface Games Based on Consumer-Grade EEG Devices.md  Brain-Computer Interfacing and Games.md  Brain–computer interfaces for communication and control.md  Classification of Movement Intention Using Independent Components of Premovement EEG.md  Co-adaptive calibration to improve BCI efficiency.md  Comparison of signal decomposition methods in classification of EEG signals for motor-imagery BCI system.md  Deep learning for motor imagery EEG-based classification, A review.md  EEG Normal Waveforms.md  (+24 more)
Electroencephalographing/: 2024-01-30.md  2024-02-13.md  2024-02-20.md  2024-02-27.md  2024-03-19.md  2024-04-02.md  2024-04-09.md  2024-04-16.md  2024-04-23.md  2024-04-30.md  2024-05-09.md  Feature Extraction.md  Games.md  TO-DO.md  left vs right hand vs ambidex.md  research-questions.md  throwaway.md
src/: requirements.txt  requirements.yml
(+60 files in other folders)
