[tool.poetry]
name = "electroencephalogaming"
version = "0.1.0"
description = "Chris and Laurids bachelor project"
authors = ["Chris Aftzidis <caft@itu.dk>", "Laurids Holme Pedersen <lrpe@itu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pylsl = "^1.16.2"
mne = "^1.6.1"
moabb = "^1.0.0"
fastparquet = "^2024.2.0"
pandas = ">=1.5, <2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["src/psychopy"]
line-length = 128