[tool.poetry]
name = "electroencephalogaming"
version = "0.1.0"
description = "Chris and Laurids bachelor project"
authors = ["Chris Aftzidis <caft@itu.dk>", "Laurids Holme Pedersen <lrpe@itu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pylsl = "^1.16.2"
mne = "^1.6.1"
fastparquet = "^2024.2.0"
pandas = ">=1.5, <2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["src/psychopy"]
line-length = 128